--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,6 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +20,157 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+.form {
+  display: flex;
+  justify-content: center;
+  padding-top: 36px;
+  margin-bottom: 32px;
+}
+
+.form input {
+  margin-right: 8px;
+  border: 1px solid #808080;
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  padding-left: 16px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #808080;
+  outline: 0;
+  transition: all 350ms;
+}
+
+.form input:hover {
+  border: 1px solid #000;
+}
+
+.form input:focus {
+  border: 1px solid #4e75ff;
+}
+
+.form button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  border: 0;
+  background-color: #4e75ff;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #fff;
+  transition: background-color 350ms;
+}
+
+.form button:hover {
+  background-color: #6c8cff;
+}
+
+.images-list {
+  width: 1128px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  margin: 0 auto;
+}
+
+.images-item {
+  border: 1px solid #808080;
+  width: 360px;
+  min-height: 200px;
+  transition: all 350ms;
+  border-radius: 8px;
+}
+
+.images-item img {
+  width: 360px;
+  height: 200px;
+  border-radius: 8px;
+}
+
+.images-item:hover {
+  box-shadow: 7px 7px 14px #c7c7c7, -7px -7px 14px #f9f9f9;
+  transform: scale(1.02);
+}
+
+.images-item span {
+  display: block;
+}
+
+.property {
+  line-height: 200%;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.weight {
+  font-weight: 600;
+}
+
+.loader {
+  margin: auto;
+  display: none;
+  position: relative;
+  width: 85px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgb(121, 121, 212) 50px, transparent 0),
+    linear-gradient(blue 50px, transparent 0),
+    linear-gradient(rgb(121, 121, 212) 50px, transparent 0),
+    linear-gradient(blue 50px, transparent 0),
+    linear-gradient(rgb(121, 121, 212) 50px, transparent 0),
+    linear-gradient(blue 50px, transparent 0);
+  background-position: 0px center, 15px center, 30px center, 45px center,
+    60px center, 75px center, 90px center;
+  animation: rikSpikeRoll 0.65s linear infinite alternate;
+}
+
+@keyframes rikSpikeRoll {
+  0% {
+    background-size: 10px 3px;
+  }
+
+  16% {
+    background-size: 10px 50px, 10px 3px, 10px 3px, 10px 3px, 10px 3px, 10px 3px;
+  }
+
+  33% {
+    background-size: 10px 30px, 10px 50px, 10px 3px, 10px 3px, 10px 3px,
+      10px 3px;
+  }
+
+  50% {
+    background-size: 10px 10px, 10px 30px, 10px 50px, 10px 3px, 10px 3px,
+      10px 3px;
+  }
+
+  66% {
+    background-size: 10px 3px, 10px 10px, 10px 30px, 10px 50px, 10px 3px,
+      10px 3px;
+  }
+
+  83% {
+    background-size: 10px 3px, 10px 3px, 10px 10px, 10px 30px, 10px 50px,
+      10px 3px;
+  }
+
+  100% {
+    background-size: 10px 3px, 10px 3px, 10px 3px, 10px 10px, 10px 30px,
+      10px 50px;
+  }
+}
+
+.loader-close {
+  display: none;
+}
+
+.loader-open {
+  display: block;
 }
