--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,157 +20,170 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-.form {
-  display: flex;
-  justify-content: center;
-  padding-top: 36px;
-  margin-bottom: 32px;
+
+  --primery-white-color: #fff;
+  --primery-black-color: #000;
+  --accent-color: #4e75ff;
+  --border-color: #808080;
 }
 
-.form input {
-  margin-right: 8px;
-  border: 1px solid #808080;
-  width: 272px;
-  height: 40px;
-  border-radius: 4px;
-  padding-left: 16px;
-  font-size: 16px;
-  letter-spacing: 0.04em;
-  color: #808080;
-  outline: 0;
-  transition: all 350ms;
+body {
+  font-family: Montserrat;
 }
 
-.form input:hover {
-  border: 1px solid #000;
-}
-
-.form input:focus {
-  border: 1px solid #4e75ff;
-}
-
-.form button {
-  border-radius: 8px;
+button {
+  background-color: var(--accent-color);
+  color: var(--primery-white-color);
   padding: 8px 16px;
-  width: 91px;
+  border-radius: 8px;
+  border: none;
+  transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 95px;
   height: 40px;
-  border: 0;
-  background-color: #4e75ff;
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.04em;
-  color: #fff;
-  transition: background-color 350ms;
+  margin-top: 16px;
+  width: 223px;
+  height: 40px;
+  margin-top: 16px;
 }
 
-.form button:hover {
-  background-color: #6c8cff;
+button:hover {
+  background-color: rgba(108, 140, 255, 1);
 }
 
-.images-list {
-  width: 1128px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
+.search {
+  text-align: center;
+  padding: 35px 0;
+}
+
+input {
+  width: 320px;
+  border-radius: 7px;
+  border: 1px solid var(--border-color);
+  outline: transparent;
+  padding: 10px 16px;
+}
+
+input:focus {
+  border-color: var(--accent-color);
+}
+
+.container {
+  padding: 0 15px;
   margin: 0 auto;
 }
 
-.images-item {
-  border: 1px solid #808080;
-  width: 360px;
-  min-height: 200px;
-  transition: all 350ms;
-  border-radius: 8px;
-}
-
-.images-item img {
-  width: 360px;
-  height: 200px;
-  border-radius: 8px;
-}
-
-.images-item:hover {
-  box-shadow: 7px 7px 14px #c7c7c7, -7px -7px 14px #f9f9f9;
-  transform: scale(1.02);
-}
-
-.images-item span {
-  display: block;
-}
-
-.property {
-  line-height: 200%;
+.gallery {
   display: flex;
-  justify-content: space-around;
-  text-align: center;
-  font-size: 12px;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  justify-content: center;
+  padding: 20px 0;
 }
 
-.weight {
-  font-weight: 600;
+.gallery-item {
+  margin-left: 20px;
+  transition: transform 0.3s;
+}
+
+.gallery-item:hover,
+.gallery-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: scale(1.05);
+}
+
+.gallery-link {
+  min-width: 360px;
+  flex-basis: calc((100% - 80px) / 4);
+}
+
+.gallery-link:hover {
+  cursor: zoom-in;
+}
+
+.gallery-image {
+  display: block;
+  height: 30vh;
+  object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 360px;
+}
+
+.item-info-block {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--accent-color);
+  border-top: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 360px;
+  padding: 10px 0;
+}
+
+.gallery-item:hover .item-info-block {
+  border-color: var(--border-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.block {
+  text-align: center;
+  font-family: Montserrat;
+  color: #212127;
+  font-size: 15px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.title {
+  font-weight: 700;
+}
+
+.loader.is-hidden {
+  display: none;
 }
 
 .loader {
-  margin: auto;
-  display: none;
-  position: relative;
-  width: 85px;
-  height: 50px;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(rgb(121, 121, 212) 50px, transparent 0),
-    linear-gradient(blue 50px, transparent 0),
-    linear-gradient(rgb(121, 121, 212) 50px, transparent 0),
-    linear-gradient(blue 50px, transparent 0),
-    linear-gradient(rgb(121, 121, 212) 50px, transparent 0),
-    linear-gradient(blue 50px, transparent 0);
-  background-position: 0px center, 15px center, 30px center, 45px center,
-    60px center, 75px center, 90px center;
-  animation: rikSpikeRoll 0.65s linear infinite alternate;
+  width: 60px;
+  height: 60px;
+
+  border-radius: 50%;
+  color: var(--accent-color);
+  animation: fill 1s ease-in infinite alternate;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@keyframes rikSpikeRoll {
+.loader::before,
+.loader::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  left: 80px;
+  top: 0;
+  animation: fill 0.9s ease-in infinite alternate;
+}
+
+.loader::after {
+  left: auto;
+  right: 80px;
+  animation-duration: 1.1s;
+}
+
+@keyframes fill {
   0% {
-    background-size: 10px 3px;
-  }
-
-  16% {
-    background-size: 10px 50px, 10px 3px, 10px 3px, 10px 3px, 10px 3px, 10px 3px;
-  }
-
-  33% {
-    background-size: 10px 30px, 10px 50px, 10px 3px, 10px 3px, 10px 3px,
-      10px 3px;
-  }
-
-  50% {
-    background-size: 10px 10px, 10px 30px, 10px 50px, 10px 3px, 10px 3px,
-      10px 3px;
-  }
-
-  66% {
-    background-size: 10px 3px, 10px 10px, 10px 30px, 10px 50px, 10px 3px,
-      10px 3px;
-  }
-
-  83% {
-    background-size: 10px 3px, 10px 3px, 10px 10px, 10px 30px, 10px 50px,
-      10px 3px;
+    box-shadow: 0 0 0 2px inset;
   }
 
   100% {
-    background-size: 10px 3px, 10px 3px, 10px 3px, 10px 10px, 10px 30px,
-      10px 50px;
+    box-shadow: 0 0 0 10px inset;
   }
-}
-
-.loader-close {
-  display: none;
-}
-
-.loader-open {
-  display: block;
 }
